fix: undesired table jumps.

--- a/overview/style/output.css
+++ b/overview/style/output.css
@@ -1580,6 +1580,10 @@ input:checked + .toggle-bg {
   width: 300vw;
 }
 
+.w-\[5ch\] {
+  width: 5ch;
+}
+
 .w-\[calc\(60\%-2\.5rem\)\] {
   width: calc(60% - 2.5rem);
 }
@@ -1752,6 +1756,22 @@ input:checked + .toggle-bg {
           appearance: none;
 }
 
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -1760,12 +1780,24 @@ input:checked + .toggle-bg {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
+.grid-cols-\[repeat\(13\2c _minmax\(0\2c _1fr\)\)\] {
+  grid-template-columns: repeat(13, minmax(0, 1fr));
+}
+
 .grid-rows-\[1lh_minmax\(0\2c _1fr\)\] {
   grid-template-rows: 1lh minmax(0, 1fr);
+}
+
+.grid-rows-\[repeat\(32\2c _minmax\(0\2c _1fr\)\)\] {
+  grid-template-rows: repeat(32, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -1826,6 +1858,10 @@ input:checked + .toggle-bg {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .gap-px {
@@ -2073,6 +2109,11 @@ input:checked + .toggle-bg {
   border-color: rgb(230 230 230 / var(--tw-border-opacity, 1));
 }
 
+.border-oa-gray-darker {
+  --tw-border-opacity: 1;
+  border-color: rgb(195 195 195 / var(--tw-border-opacity, 1));
+}
+
 .border-oa-gray-mid {
   --tw-border-opacity: 1;
   border-color: rgb(214 214 214 / var(--tw-border-opacity, 1));
@@ -2096,6 +2137,16 @@ input:checked + .toggle-bg {
 .\!bg-gray-50 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1)) !important;
+}
+
+.\!bg-oa-gray {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(230 230 230 / var(--tw-bg-opacity, 1)) !important;
+}
+
+.\!bg-oa-gray-darker {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(195 195 195 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .bg-black\/50 {
@@ -2162,6 +2213,11 @@ input:checked + .toggle-bg {
 .bg-oa-gray {
   --tw-bg-opacity: 1;
   background-color: rgb(230 230 230 / var(--tw-bg-opacity, 1));
+}
+
+.bg-oa-gray-darker {
+  --tw-bg-opacity: 1;
+  background-color: rgb(195 195 195 / var(--tw-bg-opacity, 1));
 }
 
 .bg-oa-gray-mid {
@@ -2334,6 +2390,10 @@ input:checked + .toggle-bg {
   text-align: right;
 }
 
+.text-start {
+  text-align: start;
+}
+
 .align-middle {
   vertical-align: middle;
 }
@@ -2396,6 +2456,10 @@ input:checked + .toggle-bg {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
 
 .leading-6 {
@@ -3072,6 +3136,10 @@ html.dark {
     margin-inline-end: 6rem;
   }
 
+  .md\:p-1 {
+    padding: 0.25rem;
+  }
+
   .md\:p-5 {
     padding: 1.25rem;
   }
@@ -3084,6 +3152,17 @@ html.dark {
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  @media not all and (min-width: 1024px) {
+    .md\:max-lg\:rotate-0 {
+      --tw-rotate: 0deg;
+      transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+    }
+
+    .md\:max-lg\:text-center {
+      text-align: center;
+    }
   }
 }
 
@@ -3109,6 +3188,22 @@ html.dark {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .lg\:grid-flow-row {
+    grid-auto-flow: row;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-\[repeat\(32\2c _minmax\(0\2c _1fr\)\)\] {
+    grid-template-columns: repeat(32, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-\[repeat\(13\2c _minmax\(0\2c _1fr\)\)\] {
+    grid-template-rows: repeat(13, minmax(0, 1fr));
+  }
+
   .lg\:gap-8 {
     gap: 2rem;
   }
@@ -3121,11 +3216,21 @@ html.dark {
   .lg\:pl-3 {
     padding-left: 0.75rem;
   }
+
+  .lg\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 1280px) {
   .xl\:w-\[1024px\] {
     width: 1024px;
+  }
+
+  .xl\:rotate-0 {
+    --tw-rotate: 0deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .xl\:gap-0 {
@@ -3135,6 +3240,16 @@ html.dark {
   .xl\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .\32xl\:p-2 {
+    padding: 0.5rem;
   }
 }
 
@@ -3177,6 +3292,11 @@ html.dark {
 
 .dark\:border-transparent:where(.dark, .dark *) {
   border-color: transparent;
+}
+
+.dark\:\!bg-black:where(.dark, .dark *) {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1)) !important;
 }
 
 .dark\:\!bg-gray-700:where(.dark, .dark *) {
